--- a/newProject.html
+++ b/newProject.html
@@ -9,15 +9,21 @@
     <body>
         <!--Nav bar-->
         <nav>
+            <div class="toggle">
+             <input type="image" src="menu.png"  id="icon">
+            </div>
         <h2 class="logo">Example</h2>
+        <div id="menu-options">
             <ul class="nav-ul">
             <li><a href="" class="navlink">Home</a></li>
             <li>   <a href="" class="navlink">About</a></li> 
             <li>   <a href="" class="navlink">Sign in</a></li> 
             <li>  <a href="" class="navlink">Log in</a></li> 
             </ul>
+        </div>
                 <input type="text" name="search" placeholder="Type to Search" class="searchfield">
                 <button type="submit" class="search-button">🔍</button>
         </nav>
+        <script src="newProject.js"></script>
     </body>
 </html>
