Added page header

--- a/newProject.html
+++ b/newProject.html
@@ -24,6 +24,15 @@
                 <input type="text" name="search" placeholder="Type to Search" class="searchfield">
                 <button type="submit" class="search-button">🔍</button>
         </nav>
+        <!--Page Header-->
+        <div class="page-header">
+            <h1 class="header-h1">Example</h1>
+            <h2 class="header-h2">Explaining what's the main purpose of my web-site.</h2>
+        </div>
+        <!--Main content-->
+        <div class="container">
+
+        </div>
         <script src="newProject.js"></script>
     </body>
 </html>
